--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -26,8 +26,8 @@
 	          <td><%= form_with model: cart_item, url: cart_item_path(cart_item) do |f| %>
 	           　 <%= f.select :quantity, *[1..99] %>
 	           　 <%= f.submit "変更" %>
-            <td><%= (cart_item.product.price * 1.1).floor * cart_item.quantity %></td>
-            <% @sum +=  (cart_item.product.price * 1.1).floor * cart_item.quantity %>
+            <td><%= (cart_item.product.price * 1.1).floor * cart_item.quantity.to_i %></td>
+            <% @sum +=  (cart_item.product.price * 1.1).floor * cart_item.quantity.to_i %>
             <% end %>
             </td>
             <td><%= link_to '削除', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
