--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -23,7 +23,7 @@
                <%=order_product.product.name %><br>
                <% end %>
             </td>
-              <td class="align-middle"><%= "#{order.payment_method}円" %></td>
+              <td class="align-middle"><%= "#{order.amount_billed}円" %></td>
               <td class="align-middle"><%= order.status %></td>
               <td class="align-middle"><%= link_to "表示する", order_path(order), class: "btn btn-primary"  %></td>
             </tr>
