--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -32,7 +32,8 @@
       <%= f.label :shipping_postal_code, "登録済住所から選択" %>
       <%= f.collection_select :shipping_postal_code, current_customer.shipping_addresses, :id, :post_code, include_blank: "選択してください" %>
       <br>
-      <%= f.radio_button :address_option, 2 %>
+       <%= f.radio_button :shipping_postal_code_option, :クレジットカード, checked: "checked" %>
+
       <%= f.label :order_address, "新しいお届け先" %>
       <br>
       <br>
