--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -6,8 +6,8 @@
       <table class="table table-bordered">
         <tr><th class="table-active">注文日</th><td><%= @order.created_at.strftime('%Y/%m/%d') %></td></tr>
         <tr><th class="table-active">配送先</th><td><%= "〒#{@order.shipping_postal_code}" %><br><%= @order.shipping_address %><br><%= @order.shipping_name %></td></tr>
-        <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method_i18n %></td></tr>
-        <tr><th class="table-active">ステータス</th><td><%= @order.status_i18n %></td></tr>
+        <tr><th class="table-active">支払い方法</th><td><%= @order.payment_method %></td></tr>
+        <tr><th class="table-active">ステータス</th><td><%= @order.status %></td></tr>
 
       </table>
     </div>
